force-app/main/default/objects/appirio_core__Currency__c/appirio_core__Currency__c.object-meta.xml
<CustomObject>
    <customHelpPage>appirio_core__CurrencyHelp</customHelpPage>
    <description>This core object is only used if you manage dated exchange rates using FinancialForce PSA instead of Salesforce advanced currency management. Associate every currency record (with matching currency code) to a currency defined by Salesforce multiple currencies (multi-currency enablement is required by PSA). Currencies have a master-detail relationship with dated exchange rates (currency exchange rates). One currency is designated as corporate.</description>
    <label>Currency</label>
    <nameField>
        <label>Currency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Currencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>