force-app/main/default/objects/appirio_core__Currency__c/fields/appirio_core__Is_Corporate_Currency__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Is_Corporate_Currency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether currency record is for Corporate Currency - i.e. currency to which all other currencies are compared for exchange rate purposes.</description>
    <inlineHelpText>Indicates whether currency record is for Corporate Currency - i.e. currency to which all other currencies are compared for exchange rate purposes.</inlineHelpText>
    <label>Is Corporate Currency</label>
    <type>Checkbox</type>
</CustomField>