force-app/main/default/objects/appirio_core__Currency__c/fields/appirio_core__Is_Test__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Is_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, indicates that this currency record is only being used in test mode and is not to be used for &apos;real&apos; (production) exchange rate conversions, and that any exchange rates defined for this currency also should not be used for &apos;real&apos; conversions.</description>
    <inlineHelpText>If checked, indicates that this currency record is only being used in test mode and is not to be used for &apos;real&apos; (production) exchange rate conversions, and that any exchange rates defined for this currency also should not be used for &apos;real&apos; conversions.</inlineHelpText>
    <label>Is Test</label>
    <type>Checkbox</type>
</CustomField>