force-app/main/default/objects/appirio_core__Currency__c/fields/appirio_core__Is_Void__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Is_Void__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, indicates that this currency record is invalid and is not to be used, and that any exchange rates defined for this currency also should not be used.</description>
    <inlineHelpText>If checked, indicates that this currency record is invalid and is not to be used, and that any exchange rates defined for this currency also should not be used.</inlineHelpText>
    <label>Is Void</label>
    <type>Checkbox</type>
</CustomField>